--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -34,7 +34,7 @@ nav {
   }
   .profile-container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100vw;
     grid-auto-rows: minmax(87px, auto);
     grid-template-areas:
     "header"
